--- a/about.html
+++ b/about.html
@@ -43,8 +43,7 @@ layout: default
   <img src="{{site.url }}/{{ site.baseurl }}/assets/img/profilepic.jpg" />
   <section>
     <p>
-      I am a writer, software developer, and multimedia designer studying
-      computer science at West Virginia University.
+      Victor Perez is a silent observer of daily life. On occasion, his observations get recorded and posted on this site. He is also a software engineer at realtor.com.
     </p>
     <p>
       This website is built using the static site generator
@@ -55,7 +54,7 @@ layout: default
       <a href="https://sans.website/">Erik Hartin</a> and developer
       <a href="Afonso Martins">Afonso Martins</a>.
     </p>
-    <p>Email: vjperez@mix.wvu.edu</p>
+    <p>Email: vjperez.iii@gmail.com</p>
     <p>
       LinkedIn:
       <a href="https://www.linkedin.com/in/victorjpereziii/">victorjpereziii</a>
