--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@ layout: default
 </div>
 <hr width="200" />
 <div class="about-info">
-  <img src="{{site.url }}/{{ site.baseurl }}/assets/img/profilepic.jpg" />
+  <img src="https://victorjperez.github.io/writing/assets/img/profilepic.jpg" />
   <section>
     <p>
       Victor Perez is a silent observer of daily life. On occasion, his observations get recorded and posted on this site. He is also a software engineer at realtor.com.
